fix mobile spacing

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -6,7 +6,7 @@ footer {
   // padding: 3em 0 0 0;
 
   @media screen and (max-width: 992px) {
-    padding-top: rem(200);
+    padding-top: rem(50);
   }
 
   .footerTextContainer {
